--- a/TechJobsMVC/Views/Search/Index.cshtml
+++ b/TechJobsMVC/Views/Search/Index.cshtml
@@ -29,5 +29,36 @@
     @{
         //TODO #4: Loop over the search results to display all job fields.
     }
-
+    <table class="customstripe">   
+        @if (ViewBag.jobs != null)
+        {
+            @foreach (var job in ViewBag.jobs)
+            {
+                <tr>
+                    <td>Id</td>
+                    <td>@job.Id</td>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td>@job.Name</td>
+                </tr>
+                <tr>
+                    <td>Employer</td>
+                    <td>@job.Employer</td>
+                </tr>
+                <tr>
+                    <td>Location</td>
+                    <td>@job.Location</td>
+                </tr>     
+                <tr>
+                    <td>Position Type</td>
+                    <td>@job.PositionType</td>
+                </tr>   
+                <tr>
+                    <td>Skill</td>
+                    <td>@job.CoreCompetency</td>
+                </tr>
+            }
+        }
+    </table>  
 </div>
